--- a/resources/assets/templates/homepage.html
+++ b/resources/assets/templates/homepage.html
@@ -1,5 +1,15 @@
 <md-content layout-padding style="height: 600px;padding: 24px;">
-    <img src="/img/logo.svg" alt="Logo" style="width: 200px">
-    <h1>UpdateCheck</h1>
-    <p>Lorem ipsum dolor sit amet, ne quod novum mei. Sea omnium invenire mediocrem at, in lobortis conclusionemque nam. Ne deleniti appetere reprimique pro, inani labitur disputationi te sed. At vix sale omnesque, id pro labitur reformidans accommodare, cum labores honestatis eu. Nec quem lucilius in, eam praesent reformidans no. Sed laudem aliquam ne.</p>
+    <md-white1frame class="md-whiteframe-z1" layout layout-align="center center" style="padding:24px;">
+        <md-content>
+            <div class="logo" layout="row" layout-align="center center">
+                <div flex="15">
+                    <img src="/img/logo.svg" alt="Logo">
+                </div>
+                <div flex="45">
+                    <h1>UpdateCheck</h1>
+                </div>
+            </div>
+            <h2>UpdateCheck is a site you can use for your application to check if they need an update.</h2>
+        </md-content>
+    </md-white1frame>
 </md-content>
