Added i18n to header welcome message, fixed position of toast message and watched i18n files for changes

--- a/resources/assets/stylesheets/app.scss
+++ b/resources/assets/stylesheets/app.scss
@@ -1,2 +1,11 @@
+
+// Globals
 @import "globals/logo";
+
+// Components
 @import "components/register-dialog";
+@import "components/md-toast";
+
+// Sections
+
+// Plugins
